# nova

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  test_tool_execution.py  test_yaml_frontmatter.py
.claude/commands/: fix-github-issue.md  pr.md  review.md
.claude/plans/: custom-prompting-feature.md  enhanced-memory-system.md  enhanced_search_implementation_plan.md  file-operations-feature.md  mcp-integration-feature.md  quick-wins-roadmap.md  rag-support-feature.md  task-management-feature.md  unified-tools-function-calling.md  web-search-feature.md
.github/workflows/: test.yml
config/: default.yaml
docs/: web_search.md
examples/: search_demo.py
nova/: __init__.py  main.py
nova/cli/: __init__.py  chat.py  config.py  tools.py
nova/core/: __init__.py  ai_client.py  chat.py  config.py  history.py  input_handler.py  memory.py  metrics.py  prompts.py  search.py
nova/core/tools/: __init__.py  handler.py  permissions.py  registry.py
nova/models/: config.py  message.py  prompts.py  tools.py
nova/tools/: README.md  __init__.py  decorators.py  registry.py
nova/tools/built_in/: __init__.py  conversation.py  file_ops.py  network_tools.py  text_tools.py  web_search.py
nova/tools/mcp/: __init__.py
nova/tools/templates/: basic_tool.py  file_tool.py
nova/tools/user/: __init__.py
nova/utils/: files.py  formatting.py
prompts/: analyze.yaml  code-review.yaml  email.yaml  explain.yaml  summarize.yaml
tests/: conftest.py
tests/fixtures/: sample_config.yaml  sample_history.md
tests/integration/: test_cli_chat.py  test_cli_config.py  test_cli_profile.py  test_full_flow.py
tests/unit/: test_ai_client.py  test_chat_core.py  test_config.py  test_direct_tool_execution.py  test_history.py  test_input_handler.py  test_memory.py  test_metrics.py  test_models.py  test_profile_tools_config.py  test_prompts.py  test_search.py  test_search_content_summarizer.py  test_tools_built_in_file_ops.py  test_tools_decorators.py  test_tools_discovery.py  test_tools_function_registry.py  test_tools_integration.py  test_tools_models.py  test_tools_permissions.py  test_tools_web_search.py  test_utils.py
